compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__type_vars_must_be_declared.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "type A(a) { A };\ntype B = a"

---
error: Unknown type
  ┌─ /src/one/two.gleam:2:10
  │
2 │ type B = a
  │          ^ did you mean `A`?

The type `a` is not defined or imported in this module.

